--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
     "metisMenu": "~1.1.2",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "angular-momentjs": "~0.1.8",
+    "moment": "~2.8.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
